--- a/app-to-PCF/task-buildapp.yml
+++ b/app-to-PCF/task-buildapp.yml
@@ -1,10 +1,6 @@
 platform: linux
 
-image_resource:
-  type: docker-image
-  source:
-    repository: ubuntu
-    tag: "14.04"
+image: docker:///datianshi/gradle
 
 inputs:
   - name: java-app-src
