--- a/app-to-PCF/task-buildapp.yml
+++ b/app-to-PCF/task-buildapp.yml
@@ -9,4 +9,5 @@ inputs:
 outputs:
   - name: java-app-jar
 
-run: jar-pipelines/app-to-PCF/task-buildapp.sh
+run:
+  path: jar-pipelines/app-to-PCF/task-buildapp.sh
