--- a/app-to-PCF/task-buildapp.yml
+++ b/app-to-PCF/task-buildapp.yml
@@ -10,4 +10,6 @@ outputs:
   - name: java-app-jar
 
 run:
-  path: jar-pipelines/app-to-PCF/task-buildapp.sh
+  path: ls
+  args: [-alR]
+##  path: jar-pipelines/app-to-PCF/task-buildapp.sh
