--- a/app-to-PCF/task-buildapp.yml
+++ b/app-to-PCF/task-buildapp.yml
@@ -10,6 +10,4 @@ outputs:
   - name: java-app-jar
 
 run:
-  path: ls
-  args: [-alR]
-##  path: jar-pipelines/app-to-PCF/task-buildapp.sh
+  path: ./jar-pipelines/app-to-PCF/task-buildapp.sh
